--- a/package.json
+++ b/package.json
@@ -11,27 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular-devkit/core": "*0.6.3",
+    "@angular/animations": "^7.0.0",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/material": "^7.0.1",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
     "@types/d3": "^5.7.2",
     "core-js": "^2.5.4",
     "d3": "^5.9.2",
     "rxjs": "^6.0.0",
     "underscore": "^1.9.1",
+    "vega": "^5.4.0",
+    "vega-embed": "^4.2.0",
+    "vega-lite": "^3.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.5",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.5",
+    "@angular/cli": "7.0.2",
+    "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -46,6 +51,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "3.1.3"
   }
 }
